Updated to Spring Boot 3.5.8